Change add/remove trainer to work with usernames
