# src/main/resources/static/openAPI.yaml
@@ -145,9 +145,9 @@ paths:
           application/json:
             schema:
               properties:
-                userId:
-                  type: integer
-                  example: 1
+                username:
+                  type: string
+                  example: "jara"
       responses:
         '200':
           description: OK
@@ -180,14 +180,14 @@ paths:
           application/json:
             schema:
               properties:
-                userId:
-                  type: integer
-                  example: 1
+                username:
+                  type: string
+                  example: "jara"
       responses:
         '204':
           description: No Content
         '400':
-          description: Bad Request
+          description: Bad Format
         '404':
           description: Not Found
       tags:
